<resources>
    <string name="app_name">CampusConnect</string>
    <string name="campusconnect">CampusConnect</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email_or_student_number">Email or Student Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="student_registration">Student Registration</string>
    <string name="student_number">Student Number</string>
    <string name="first_name">First Name</string>
    <string name="middle_name_optional">Middle Name (Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="college_e_g_ccs">College (e.g., CCS)</string>
    <string name="program_e_g_bscs">Program (e.g., BSCS)</string>
    <string name="passwords">Password</string>
    <string name="create_account">Create Account</string>
    <string name="campusconnect1">CampusConnect</string>
    <string name="your_centralized_school_events_hub">Your centralized school events hub</string>
    <string name="login1">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="exit_app">Exit App</string>
</resources>