<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    tools:context=".MainActivity">



    <TextView

        android:id="@+id/tvTitle"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/campusconnect"

        android:textSize="32sp"

        android:textStyle="bold"

        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/tilUsername"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.3" />



    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/sign_in_to_continue"

        android:textSize="16sp"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/tvTitle"

        app:layout_constraintStart_toStartOf="@id/tvTitle"

        app:layout_constraintEnd_toEndOf="@id/tvTitle"/>



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tilUsername"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/email_or_student_number"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.4">



        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etUsername"

            android:inputType="textEmailAddress"

            android:layout_width="match_parent"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tilPassword"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:hint="@string/password"

        android:layout_marginTop="16dp"

        app:endIconMode="password_toggle"

        app:layout_constraintTop_toBottomOf="@id/tilUsername">



        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/etPassword"

            android:inputType="textPassword"

            android:layout_width="match_parent"

            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView

        android:id="@+id/tvForgotPassword"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/forgot_password"

        android:textColor="#1976D2"

        android:layout_marginTop="8dp"

        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tilPassword" />



    <Button

        android:id="@+id/btnLogin"

        android:layout_width="match_parent"

        android:layout_height="60dp"

        android:text="@string/login"

        android:layout_marginTop="24dp"

        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />



    <LinearLayout

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:layout_marginBottom="24dp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent">



        <TextView

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/don_t_have_an_account" />



        <TextView

            android:id="@+id/tvRegisterLink"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/create_one"

            android:textStyle="bold"

            android:textColor="#1976D2" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout> package com.example.campusconnect