<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campusconnect1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#B71C1C"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_centralized_school_events_hub"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvAppTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login1"
        android:backgroundTint="#B71C1C"
        app:layout_constraintBottom_toTopOf="@+id/btnGoToSignup"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle"
        app:layout_constraintVertical_bias="0.8"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/btnGoToSignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D32F2F"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToLogin"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/exit_app"
        android:layout_marginTop="16dp"
        android:backgroundTint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToSignup"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>